[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/MouseIcons/tower.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Tower/Tower.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 1, 1 )

[sub_resource type="CircleShape2D" id=2]
radius = 63.2851

[node name="Tower" type="StaticBody2D" groups=["towers"]]
collision_layer = 8
collision_mask = 11
script = ExtResource( 2 )
condition_max = 50
MIN_DISTANCE = 100

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.220001, 0.330643 )
texture = ExtResource( 1 )

[node name="Bar" type="ProgressBar" parent="."]
margin_left = -26.0
margin_top = -107.0
margin_right = 25.0
margin_bottom = -93.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_styles/fg = SubResource( 1 )
max_value = 50.0

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
scale = Vector2( 0.525, 0.814815 )
polygon = PoolVector2Array( -40, 55, -34.2857, 2.45455, -17.1429, -66.2727, 20.9524, -66.2727, 32.381, 2.45455, 40, 67, -20, 67 )

[node name="ShootPoint" type="Position2D" parent="."]
position = Vector2( 3, -29 )

[connection signal="mouse_entered" from="." to="." method="_on_Tower_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Tower_mouse_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
